--- a/assets/data/ui/main.ui
+++ b/assets/data/ui/main.ui
@@ -1,115 +1,33 @@
-
+<!--
+-----------------------------------------------------------------------------
+ Umicom Studio IDE
+ File: assets/data/ui/main.ui
+ PURPOSE: Minimal UI definition to satisfy GTK resource loading
+ Created by: Umicom Foundation | Author: Sammy Hegab | Date: 2025-10-01 | MIT
+-----------------------------------------------------------------------------
+-->
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <requires lib="gtk" version="4.10"/>
-  <object class="GtkApplicationWindow" id="app_window">
-    <property name="default-width">1280</property>
-    <property name="default-height">800</property>
-    <child type="titlebar">
-      <object class="GtkHeaderBar">
-        <property name="title-widget">
-          <object class="GtkLabel">
-            <property name="label">Umicom Studio</property>
-            <style>
-              <class name="title"/>
-            </style>
-          </object>
-        </property>
-        <child type="start">
-          <object class="GtkButton" id="btn_open">
-            <property name="icon-name">document-open-symbolic</property>
-            <property name="tooltip-text">Open Project</property>
-          </object>
-        </child>
-        <child type="end">
-          <object class="GtkMenuButton" id="menu_app">
-            <property name="icon-name">open-menu-symbolic</property>
-          </object>
-        </child>
-      </object>
-    </child>
+  <requires lib="gtk" version="4.0"/>
+  <object class="GtkApplicationWindow" id="main_window">
+    <property name="title">Umicom Studio IDE</property>
+    <property name="default-width">1024</property>
+    <property name="default-height">700</property>
 
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
-        <child>
-          <object class="GtkPaned" id="root_pane">
-            <property name="start-child">
-              <object class="GtkBox">
-                <property name="width-request">260</property>
-                <property name="orientation">vertical</property>
-                <child>
-                  <object class="GtkLabel">
-                    <property name="label">Project</property>
-                    <style><class name="heading"/></style>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkListView" id="project_list"/>
-                </child>
-              </object>
-            </property>
+        <property name="spacing">6</property>
 
-            <property name="end-child">
-              <object class="GtkBox">
-                <property name="orientation">vertical</property>
-                <child>
-                  <object class="GtkNotebook" id="editor_tabs">
-                    <child>
-                      <object class="GtkBox">
-                        <property name="orientation">vertical</property>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">Welcome</property>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkScrolledWindow">
-                            <child>
-                              <object class="GtkTextView" id="editor_area"/>
-                            </child>
-                          </object>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="tab-expand">true</property>
-                        <property name="tab-fill">true</property>
-                        <property name="tab-label">Welcome</property>
-                      </packing>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkRevealer" id="bottom_revealer">
-                    <property name="reveal-child">true</property>
-                    <child>
-                      <object class="GtkBox">
-                        <property name="height-request">180</property>
-                        <property name="orientation">vertical</property>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="label">Logs</property>
-                            <style><class name="heading"/></style>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkScrolledWindow">
-                            <child>
-                              <object class="GtkTextView" id="logs_area"/>
-                            </child>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </property>
+        <child>
+          <object class="GtkLabel">
+            <property name="label">Welcome to Umicom Studio IDE</property>
+            <property name="margin-top">12</property>
+            <property name="margin-bottom">12</property>
+            <property name="halign">center</property>
           </object>
         </child>
-        <child>
-          <object class="GtkStatusbar" id="statusbar"/>
-        </child>
+
       </object>
     </child>
   </object>
